# aoc-2025

./: .gitignore  README.md  setup_day.nu  setup_day.sh
haskell/: CHANGELOG.md  aoc25litfill.cabal
haskell/day01/: Main.hs  input.txt  test.txt
haskell/day02/: Main.hs  input.txt  test.txt
haskell/day03/: Main.hs  input.txt  test.txt
haskell/day04/: Main.hs  input.txt  test.txt
haskell/day05/: Main.hs  input.txt  test.txt
rust/: Cargo.toml
rust/src/day01/: input.txt  main.rs  test.txt
rust/src/day02/: input.txt  main.rs  test.txt
rust/src/day03/: input.txt  main.rs  test.txt
rust/src/day04/: input.txt  main.rs  test.txt
rust/src/day05/: input.txt  main.rs  test.txt
