cabal-version:      3.0
name:               aoc25litfill
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day01
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0, mtl
    hs-source-dirs:   day01
    default-language: GHC2024

executable day02
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0, split, text
    hs-source-dirs:   day02
    default-language: GHC2024



executable day03
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0, mtl
    hs-source-dirs:   day03
    default-language: GHC2024

executable day04
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0, mtl
    hs-source-dirs:   day04
    default-language: GHC2024